cloud/w10/lab_day4/tenants/payments/deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: restrict-egress
  namespace: payments

spec:
  podSelector: {}

  policyTypes:
  - Egress

  egress:

  - to:
    - podSelector: {}

  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system

    ports:
    - protocol: UDP
      port: 53
