cloud/w10/lab_day4/tenants/payments/deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-ingress
  namespace: payments

spec:
  podSelector: {}

  policyTypes:
  - Ingress
